Test-driven Approach to Effectively Dealing with Legacy Code (Code With No Tests!) + Extracting Cross-platform Components From a Platform-specific Module

--- a/EssentialFeed/EssentialFeediOS/FeedUI/Views/Feed.storyboard
+++ b/EssentialFeed/EssentialFeediOS/FeedUI/Views/Feed.storyboard
@@ -9,24 +9,41 @@
         <!--Feed View Controller-->
         <scene sceneID="giK-FG-T4r">
             <objects>
-                <tableViewController id="NHH-Wx-TTV" customClass="FeedViewController" customModule="Prototype" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="NHH-Wx-TTV" customClass="FeedViewController" customModule="EssentialFeediOS" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="j1E-fZ-7pS">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <view key="tableHeaderView" contentMode="scaleToFill" id="lOP-gH-bCn">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="16"/>
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="lOP-gH-bCn" customClass="ErrorView" customModule="EssentialFeediOS" customModuleProvider="target">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="34"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S8n-Jg-qNt">
+                                    <rect key="frame" x="16" y="0.0" width="382" height="34"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" red="1" green="0.41568627450980389" blue="0.41568627450980389" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <constraints>
+                                <constraint firstItem="S8n-Jg-qNt" firstAttribute="leading" secondItem="lOP-gH-bCn" secondAttribute="leading" constant="16" id="54J-nw-wVh"/>
+                                <constraint firstItem="S8n-Jg-qNt" firstAttribute="top" secondItem="lOP-gH-bCn" secondAttribute="top" id="5ql-WJ-Ak3"/>
+                                <constraint firstAttribute="trailing" secondItem="S8n-Jg-qNt" secondAttribute="trailing" constant="16" id="hCu-r2-kYK"/>
+                                <constraint firstAttribute="bottom" secondItem="S8n-Jg-qNt" secondAttribute="bottom" id="m7h-yU-miq"/>
+                            </constraints>
+                            <connections>
+                                <outlet property="label" destination="S8n-Jg-qNt" id="7DH-H7-OsO"/>
+                            </connections>
                         </view>
                         <view key="tableFooterView" contentMode="scaleToFill" id="Eox-Xw-Bn8">
-                            <rect key="frame" x="0.0" y="645.00000034679067" width="414" height="16"/>
+                            <rect key="frame" x="0.0" y="663.00000034679067" width="414" height="16"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="FeedImageCell" rowHeight="580" id="khr-Gm-OwR" customClass="FeedImageCell" customModule="EssentialFeediOS">
-                                <rect key="frame" x="0.0" y="40.5" width="414" height="580"/>
+                                <rect key="frame" x="0.0" y="58.5" width="414" height="580"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="khr-Gm-OwR" id="2eW-V0-TJb">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="580"/>
@@ -144,6 +161,9 @@ Location</string>
                             <action selector="refresh" destination="NHH-Wx-TTV" eventType="valueChanged" id="qfA-8B-U7y"/>
                         </connections>
                     </refreshControl>
+                    <connections>
+                        <outlet property="errorView" destination="lOP-gH-bCn" id="0JW-c7-MVK"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TTQ-23-o9B" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
