--- a/EssentialFeed/EssentialFeediOS/FeedUI/Views/Feed.storyboard
+++ b/EssentialFeed/EssentialFeediOS/FeedUI/Views/Feed.storyboard
@@ -87,6 +87,7 @@ Location</string>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Jrh-Xv-Frj">
                                                             <rect key="frame" x="0.0" y="0.0" width="374" height="374"/>
+                                                            <accessibility key="accessibilityConfiguration" identifier="feed-image-view"/>
                                                         </imageView>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5JK-4E-oKY">
                                                             <rect key="frame" x="0.0" y="0.0" width="374" height="374"/>
@@ -138,6 +139,7 @@ Location</string>
                                         <constraint firstAttribute="bottomMargin" secondItem="4sD-Tf-uIT" secondAttribute="bottom" priority="999" constant="6" id="yJj-TV-HAe"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <accessibility key="accessibilityConfiguration" identifier="feed-image-cell"/>
                                 <connections>
                                     <outlet property="descriptionLabel" destination="qmL-eb-QEN" id="81M-iB-SVs"/>
                                     <outlet property="feedImageContainer" destination="6tX-C5-rw9" id="YZT-9z-vyz"/>
